--- a/config/locales/cy.yml
+++ b/config/locales/cy.yml
@@ -1181,6 +1181,9 @@ cy:
       hide_closed_shops: "Cuddio siopau caeedig"
       show_on_map: "Dangos popeth ar y map"
   shared:
+    mailers:
+      powered_by:
+        open_food_network: "Rhwydwaith Bwyd Agored"
     menu:
       cart:
         cart: "Cart"
@@ -2365,6 +2368,7 @@ cy:
   back_to_orders_list: "Yn ôl i&#39;r rhestr archebu"
   no_orders_found: "Ni ddaethpwyd o hyd i Orchmynion"
   order_information: "Gwybodaeth Archebu"
+  new_payment: "Taliad Newydd"
   date_completed: "Dyddiad Cwblhau"
   amount: "Swm"
   state_names:
@@ -2913,10 +2917,10 @@ cy:
     your_order_is_empty_add_product: "Mae eich archeb yn wag, chwiliwch am ac ychwanegwch gynnyrch uchod"
     add_product: "Ychwanegu Cynnyrch"
     name_or_sku: "Enw neu SKU (nodwch o leiaf 4 nod cyntaf enw&#39;r cynnyrch)"
-    resend: Resend
-    back_to_orders_list: Yn ôl i&#39;r Rhestr Archebion
-    return_authorizations: Awdurdodiadau Dychwelyd
-    cannot_create_returns: Ni all greu ffurflenni gan nad oes gan y gorchymyn hwn unrhyw unedau wedi&#39;u cludo.
+    resend: "Resend"
+    back_to_orders_list: "Yn ôl i&#39;r Rhestr Archebion"
+    return_authorizations: "Awdurdodiadau Dychwelyd"
+    cannot_create_returns: "Ni all greu ffurflenni gan nad oes gan y gorchymyn hwn unrhyw unedau wedi&#39;u cludo."
     select_stock: "Dewiswch stoc"
     location: "Lleoliad"
     count_on_hand: "Cyfrif Wrth Law"
@@ -3030,6 +3034,9 @@ cy:
     back_to_taxonomies_list: "Yn ôl i&#39;r Rhestr Tacsonomeg"
     shipping_methods: "Dulliau Llongau"
     shipping_method: "Dull Llongau"
+    shipment: "Cludo"
+    payment: "Taliad"
+    status: "Statws"
     shipping_categories: "Categorïau Llongau"
     new_shipping_category: "Categori Llongau Newydd"
     back_to_shipping_categories: "Yn ôl i Gategorïau Llongau"
