--- a/config/locales/es_CR.yml
+++ b/config/locales/es_CR.yml
@@ -1146,6 +1146,9 @@ es_CR:
       hide_closed_shops: "Ocultar tiendas cerradas"
       show_on_map: "Ver todos en el mapa"
   shared:
+    mailers:
+      powered_by:
+        open_food_network: "Open Food Network"
     menu:
       cart:
         cart: "Carrito"
@@ -2305,6 +2308,7 @@ es_CR:
   back_to_orders_list: "Volver a la lista de pedidos"
   no_orders_found: "No se encontraron pedidos"
   order_information: "información del pedido"
+  new_payment: "Nuevo pago"
   date_completed: "Fecha completada"
   amount: "Cantidad"
   state_names:
@@ -2784,10 +2788,10 @@ es_CR:
     your_order_is_empty_add_product: "Su pedido está vacío, busque y añada un producto arriba"
     add_product: "Añadir Producto"
     name_or_sku: "Nombre o código SKU (ingrese al menos los primeros 4 caracteres del nombre del producto)"
-    resend: Reenviar
-    back_to_orders_list: Volver a la lista de pedidos
-    return_authorizations: Autorizaciones de devolución
-    cannot_create_returns: No se pueden crear devoluciones ya que este pedido no tiene unidades enviadas.
+    resend: "Reenviar"
+    back_to_orders_list: "Volver a la lista de pedidos"
+    return_authorizations: "Autorizaciones de devolución"
+    cannot_create_returns: "No se pueden crear devoluciones ya que este pedido no tiene unidades enviadas."
     select_stock: "Seleccionar inventario"
     location: "Ubicación"
     count_on_hand: "Cuenta de disponibilidad"
@@ -2891,6 +2895,9 @@ es_CR:
     back_to_taxonomies_list: "Volver a la lista de taxonomías"
     shipping_methods: "Métodos de envío"
     shipping_method: "Método de envío"
+    shipment: "Envío"
+    payment: "Pago"
+    status: "Estado"
     shipping_categories: "Categorías de envío"
     new_shipping_category: "Nueva categoría de envío"
     back_to_shipping_categories: "Volver a las categorías de envío"
