--- a/config/locales/en_BE.yml
+++ b/config/locales/en_BE.yml
@@ -1102,6 +1102,9 @@ en_BE:
       hide_closed_shops: "Hide closed shops"
       show_on_map: "Show all on the map"
   shared:
+    mailers:
+      powered_by:
+        open_food_network: "Open Food Network"
     menu:
       cart:
         cart: "Cart"
@@ -2254,6 +2257,7 @@ en_BE:
   back_to_orders_list: "Back to order list"
   no_orders_found: "No Orders Found"
   order_information: "Order Information"
+  new_payment: "New Payment"
   date_completed: "Date Completed"
   amount: "Amount"
   state_names:
@@ -2648,8 +2652,8 @@ en_BE:
     your_order_is_empty_add_product: "Your order is empty, please search for and add a product above"
     add_product: "Add Product"
     name_or_sku: "Name or SKU (enter at least first 4 characters of product name)"
-    resend: Resend
-    back_to_orders_list: Back To Orders List
+    resend: "Resend"
+    back_to_orders_list: "Back To Orders List"
     select_stock: "Select stock"
     location: "Location"
     count_on_hand: "Count On Hand"
@@ -2753,6 +2757,9 @@ en_BE:
     back_to_taxonomies_list: "Back to Taxonomies List"
     shipping_methods: "Shipping Methods"
     shipping_method: "Shipping Method"
+    shipment: "Shipment"
+    payment: "Payment"
+    status: "Status"
     shipping_categories: "Shipping Categories"
     new_shipping_category: "New Shipping Category"
     back_to_shipping_categories: "Back To Shipping Categories"
