--- a/config/locales/fr_BE.yml
+++ b/config/locales/fr_BE.yml
@@ -25,6 +25,7 @@ fr_BE:
         base: "Carte de crédit"
         number: "N° commande"
         month: "Mois"
+        year: "Année"
       order_cycle:
         orders_close_at: Date de fermeture
       variant_override:
@@ -1161,6 +1162,9 @@ fr_BE:
       hide_closed_shops: "Masquer les comptoirs fermés"
       show_on_map: "Tout afficher sur la carte"
   shared:
+    mailers:
+      powered_by:
+        open_food_network: "Open Food Network"
     menu:
       cart:
         cart: "Panier"
@@ -2343,6 +2347,7 @@ fr_BE:
   back_to_orders_list: "Retour à la liste des commandes"
   no_orders_found: "Aucune commande trouvée pour ces critères"
   order_information: "Info commande"
+  new_payment: "Nouveau paiement"
   date_completed: "Date d'opération"
   amount: "Montant"
   state_names:
@@ -2762,10 +2767,10 @@ fr_BE:
     your_order_is_empty_add_product: "Votre commande est vide, merci de chercher et d'ajouter un des produits ci-dessus"
     add_product: "Ajoutez un produit"
     name_or_sku: "Nom ou N° d'article (entrer au moins 4 lettres du nom du produit) "
-    resend: Renvoyer
-    back_to_orders_list: 'Retour vers la liste des commandes '
-    return_authorizations: Autorisations de retour
-    cannot_create_returns: Impossible de créer des retours car cette commande n'a pas d'unités expédiées.
+    resend: "Renvoyer"
+    back_to_orders_list: "Retour vers la liste des commandes "
+    return_authorizations: "Autorisations de retour"
+    cannot_create_returns: "Impossible de créer des retours car cette commande n'a pas d'unités expédiées."
     select_stock: "Selectionner stock"
     location: "Site"
     count_on_hand: "Compté à la main"
@@ -2875,6 +2880,9 @@ fr_BE:
     back_to_taxonomies_list: "Retour à la liste des taxonomies"
     shipping_methods: "Méthodes de livraison"
     shipping_method: "Méthode de Livraison"
+    shipment: "Envoi"
+    payment: "Paiement"
+    status: "Statut"
     shipping_categories: "Condition de transport"
     new_shipping_category: "Nouvelle catégorie d'expédition "
     back_to_shipping_categories: "Retour vers les catégories d'expédition"
