--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1249,6 +1249,10 @@ en:
     platform_terms_of_service:
       message_html: "I agree to the platform %{tos_link}."
       terms_of_service: "Terms of Service"
+    all_terms_and_conditions:
+      message_html: "I agree to the seller's %{terms_and_conditions_link} and the platform %{tos_link}."
+      terms_and_conditions: "Terms and Conditions"
+      terms_of_service: "Terms of Service"
     failed: "The checkout failed. Please let us know so that we can process your order."
   shops:
     hubs:
